@@ -69,6 +69,7 @@ install:
 	install -m644 src/ANSTE.pm $(DESTDIR)$(LIBPERL)
 	install -m644 src/ANSTE/Config.pm $(DESTDIR)$(LIBPERL)/ANSTE
 	install -m644 src/ANSTE/Status.pm $(DESTDIR)$(LIBPERL)/ANSTE
+	install -m644 src/ANSTE/Util.pm $(DESTDIR)$(LIBPERL)/ANSTE
 	install -m644 src/ANSTE/Validate.pm $(DESTDIR)$(LIBPERL)/ANSTE
 	cp -a src/ANSTE/Comm $(DESTDIR)$(LIBPERL)/ANSTE
 	cp -a src/ANSTE/Deploy $(DESTDIR)$(LIBPERL)/ANSTE
